--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -4,17 +4,17 @@
 
     <item
         android:id="@+id/action_map"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:title="@string/action_map"
+        android:icon="@android:drawable/ic_dialog_map"
+        android:title="Map"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_note"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:title="@string/action_note"
+        android:icon="@android:drawable/ic_menu_edit"
+        android:title="Note"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_profile"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:title="@string/action_profile"
+        android:icon="@drawable/instagram_user_outline_24"
+        android:title="Profile"
         app:showAsAction="always" />
 </menu>
