--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,18 +30,24 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
         android:layout_weight="1"
-        android:text="Log in" />
+        android:backgroundTint="#26C6DA"
+        android:text="Log in"
+        android:textColor="#000000" />
 
     <Button
         android:id="@+id/btnSignup"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:layout_weight="1"
-        android:text="Sign Up" />
+        android:backgroundTint="#26C6DA"
+        android:text="Sign Up"
+        android:textColor="#000000" />
 
 </LinearLayout>
