--- a/app/src/main/res/layout/activity_logout.xml
+++ b/app/src/main/res/layout/activity_logout.xml
@@ -16,6 +16,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="157dp"
         android:layout_marginTop="170dp"
+        android:backgroundTint="#26C6DA"
         android:text="Log Out" />
 
     <TextView
