--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -40,10 +40,13 @@
 
     <Button
         android:id="@+id/btnSignup"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:layout_weight="1"
-        android:text="Sign Up" />
+        android:backgroundTint="#26C6DA"
+        android:text="Sign Up"
+        android:textColor="#000000" />
 
 </LinearLayout>
