--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -16,6 +16,7 @@
         android:hint="@string/add_title"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textAlignment="center"
         android:textColorHint="#757575" />
 
     <EditText
@@ -25,10 +26,12 @@
         android:layout_below="@+id/etTitle"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="25dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="27dp"
         android:layout_marginTop="55dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginEnd="23dp"
         android:autofillHints=""
+        android:backgroundTint="#26C6DA"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/content"
@@ -42,5 +45,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="72dp"
         android:layout_marginEnd="68dp"
-        android:text="@string/note" />
+        android:text="@string/note"
+        android:textColor="#000000" />
 </RelativeLayout>
